--- a/styles/src/_bootstrap_dashboard.scss
+++ b/styles/src/_bootstrap_dashboard.scss
@@ -9,17 +9,23 @@ These styles are unedited from http://getbootstrap.com/examples/dashboard/dashbo
 Any amendments to them should be made to a separate SASS include.
 
 */
+
+
+
 /*
  * Base structure
  */
+
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
 }
 
+
 /*
  * Global add-ons
  */
+
 .sub-header {
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
@@ -36,11 +42,11 @@ body {
 /*
  * Sidebar
  */
+
 /* Hide for mobile, show later */
 .sidebar {
   display: none;
 }
-
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
@@ -51,25 +57,22 @@ body {
     display: block;
     padding: 20px;
     overflow-x: hidden;
-    overflow-y: auto;
-    /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
 }
+
 /* Sidebar navigation */
 .nav-sidebar {
-  margin-right: -21px;
-  /* 20px padding + 1px border */
+  margin-right: -21px; /* 20px padding + 1px border */
   margin-bottom: 20px;
   margin-left: -20px;
 }
-
 .nav-sidebar > li > a {
   padding-right: 20px;
   padding-left: 20px;
 }
-
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
@@ -77,13 +80,14 @@ body {
   background-color: #428bca;
 }
 
+
 /*
  * Main content
  */
+
 .main {
   padding: 20px;
 }
-
 @media (min-width: 768px) {
   .main {
     padding-right: 40px;
@@ -94,25 +98,22 @@ body {
   margin-top: 0;
 }
 
+
 /*
  * Placeholder dashboard ideas
  */
+
 .placeholders {
   margin-bottom: 30px;
   text-align: center;
 }
-
 .placeholders h4 {
   margin-bottom: 0;
 }
-
 .placeholder {
   margin-bottom: 20px;
 }
-
 .placeholder img {
   display: inline-block;
   border-radius: 50%;
 }
-
-/*# sourceMappingURL=main.css.map */
