Populate notification panel
Introduces site title and icons for the notification panel. Also
provides a 'message' indicator (for demo purposes).

--- a/styles/src/_variables.scss
+++ b/styles/src/_variables.scss
@@ -7,4 +7,5 @@ $padding-unit-large: $padding-unit * 2;
 $home-office-colour: #9325b2;
 $light-grey: #dedede;
 $dark-grey: #343434;
+$notification-yellow: rgb(252, 255, 42);
 
