--- a/templates/aggregate-transfers.html
+++ b/templates/aggregate-transfers.html
@@ -1,5 +1,10 @@
+{% extends "layout.html" %}
+
+{% block title %} app_name {% endblock %}
+
+{% block content %}
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header">Home Office Transfers</h1>
+    <h1 class="page-header">{{ department_name }} Transfers</h1>
     <div class="row">
         <div class="col-md-3">
             <p class="navbar-left">Filter by</p>
@@ -21,6 +26,12 @@
         </div>
     </div>
     <div class="results">
-        <?php render_aggregate_transfers() ?>
+        {% for year in range(2014,2017) %}
+            <h3>{{ year }}</h3>
+            {% for i in range(0,3) %}
+                {% include 'individual-transfer.html' %}
+            {% endfor %}
+        {% endfor %}
     </div>
 </div>
+{% endblock %}
