--- a/templates/individual-transfer.html
+++ b/templates/individual-transfer.html
@@ -1,24 +1,14 @@
 <a href="#">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <?php
-                $letters = range('A','Z');
-                $k = array_rand($letters);
-                $v = $letters[$k];
-            ?>
-            <h3 class="panel-title"><?php echo 'Transfer '.$v; ?></h3>
+            <h3 class="panel-title">Transfer</h3>
         </div>
         <div class="panel-body">
             <div class="col-md-1">
-                <?php
-                    $array = array('glyphicon-cloud-upload','glyphicon-hdd');
-                    $k = array_rand($array);
-                    $v = $array[$k];
-                ?>
-                <span class="glyphicon <?php echo $v; ?>" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
             </div>
             <div class="col-md-11">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi autem consectetur cum dignissimos ipsam laboriosam odio pariatur tempore veniam</p>
             </div>
         </div>
         <div class="panel-footer">
