Issue: sidebar search button was overflowing. This is now aligned with the search input field.

--- a/templates/search-form.html
+++ b/templates/search-form.html
@@ -1,8 +1,10 @@
 <form class="search-form form-inline">
-    <div class="form-group">
-        <label class="sr-only">search</label>
-        <label for="input-search" class="sr-only">search</label>
-        <input type="search" class="form-control" id="input-search" placeholder="Search transfers">
-    </div>
-    <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+    <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search">
+        <span class="input-group-btn">
+        <button class="btn btn-default" type="button">
+            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+        </button>
+      </span>
+    </div><!-- /input-group -->
 </form>
