--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,10 +7,10 @@
     <title>{{ page_title }} | {{ app_name }}</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- Custom styles for the prototype -->
-    <link href="styles/dist/main.css" rel="stylesheet">
+    <link href="/styles/dist/main.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -35,8 +35,8 @@
     </div>
 </div>
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
