Added individual transfer details view and route.

--- a/templates/individual-transfer.html
+++ b/templates/individual-transfer.html
@@ -1,4 +1,4 @@
-<a href="#">
+<a href="/transfer">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">Transfer</h3>
