Changed the view name to 'transfer-list' which reflects more on the actual pageview. Removed a comment.

--- a/templates/transfer-details.html
+++ b/templates/transfer-details.html
@@ -21,7 +21,7 @@
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">Upload</button>
                     </span>
-                </div><!-- /input-group -->
+                </div>
             </div>
         </div>
     </div>
