Added success partial to the individual view, after the upload.

--- a/templates/individual-transfer.html
+++ b/templates/individual-transfer.html
@@ -8,7 +8,8 @@
                 <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
             </div>
             <div class="col-md-11">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi autem consectetur cum dignissimos ipsam laboriosam odio pariatur tempore veniam</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi autem consectetur cum
+                    dignissimos ipsam laboriosam odio pariatur tempore veniam</p>
             </div>
         </div>
         <div class="panel-footer">
