--- a/templates/transfer-details.html
+++ b/templates/transfer-details.html
@@ -21,7 +21,7 @@
                 <div class="panel-heading">Select metadata for transfer</div>
                 <div class="panel-body">
                     <div class="input-group">
-                        <input data-show-preview="true" type="file" class="form-control" placeholder="Upload CSV">
+                        <input data-show-preview="true" type="file" class="form-control" placeholder="Upload CSV" name="upload">
                         <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">Upload</button>
                     </span>
