Add summary view
Summary view is conditionally shown based on the presence of a
'show_summary' boolean which is set in the route.

--- a/templates/transfer-details.html
+++ b/templates/transfer-details.html
@@ -21,15 +21,18 @@
                 <div class="panel-heading">Select metadata for transfer</div>
                 <div class="panel-body">
                     <div class="input-group">
-                        <input data-show-preview="true" type="file" class="form-control" placeholder="Upload CSV" name="upload">
+                        <input data-show-preview="true" type="file" class="form-control" placeholder="Upload CSV"
+                               name="upload">
                         <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">Upload</button>
                     </span>
                     </div>
                 </div>
             </div>
-
         </form>
+        {% if show_summary %}
+        {{ include('transfer-summary.html') }}
+        {% endif %}
     </div>
 </div>
 {% endblock %}
