--- a/templates/transfer-details.html
+++ b/templates/transfer-details.html
@@ -16,7 +16,7 @@
         </div>
         {% block flash_message %}
         {% endblock %}
-        <form action="" method="post">
+        <form action="/metadata-upload" method="post">
             <div class="panel panel-default">
                 <div class="panel-heading">Select metadata for transfer</div>
                 <div class="panel-body">
