--- a/templates/aggregate-transfers.html.twig
+++ b/templates/aggregate-transfers.html.twig
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout.html.twig" %}
 
 {% block title %} app_name {% endblock %}
 
@@ -29,7 +29,7 @@
         {% for year in range(2014,2017) %}
             <h3>{{ year }}</h3>
             {% for i in range(0,3) %}
-                {% include 'individual-transfer.html' %}
+                {% include 'individual-transfer.html.twig' %}
             {% endfor %}
         {% endfor %}
     </div>
