--- a/templates/search-form.html.twig
+++ b/templates/search-form.html.twig
@@ -6,5 +6,5 @@
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
         </button>
       </span>
-    </div><!-- /input-group -->
+    </div>
 </form>
