--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -3,14 +3,14 @@
         <h2>{{ department_name }}</h2>
     </div>
 
-    {% include 'search-form.html' %}
+    {% include 'search-form.html.twig' %}
 
     <h3>Dashboard</h3>
     <ul class="nav nav-sidebar">
         <li class="active"><a href="#">My Transfers<span class="sr-only">(current)</span></a></li>
         <li><a href="#">My Records</a></li>
     </ul>
-    {% include 'guidance.html' %}
+    {% include 'guidance.html.twig' %}
     <h3>Messages</h3>
     <ul class="nav nav-sidebar">
         <li><a href="">Message center</a></li>
