Added route and view for record search.

--- a/templates/transfer-summary.html.twig
+++ b/templates/transfer-summary.html.twig
@@ -10,17 +10,23 @@
                 <p>
                     Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
                 </p>
+                <p>
+                    Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur
+                </p>
+                <p>
+                    The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero
+                </p>
             </div>
             <div class="col-md-6">
                 <img src="http://www.iconsdb.com/icons/preview/black/pie-chart-xxl.png" class="img-responsive center-block">
                 <hr>
-                <ul>
-                  <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-                  <li>Aliquam tincidunt mauris eu risus.</li>
-                  <li>Vestibulum auctor dapibus neque.</li>
-                  <li>Nunc dignissim risus id metus.</li>
-                  <li>Cras ornare tristique elit.</li>
-                </ul>
+                <div class="list-group">
+                    <a href="/search-results" class="list-group-item">Records in word format (.doc) <span class="badge">14</span></a>
+                    <a href="/search-results" class="list-group-item">Records in pdf format (.pdf) <span class="badge">6</span></a>
+                    <a href="/search-results" class="list-group-item">Records in excel format (.xl) <span class="badge">4</span></a>
+                    <a href="/search-results" class="list-group-item">Records in Picture format (.jpg) <span class="badge">34</span></a>
+                    <a href="/search-results" class="list-group-item">Records in other format <span class="badge">0</span></a>
+                </div>
             </div>
         </div>
     </div>
