Add view and route for 'begin transfer' step

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -28,7 +28,9 @@
 <div class="container-fluid">
     <div class="row">
         {% include 'sidebar.html.twig' %}
-        {% block content %}{% endblock %}
+        <main>
+            {% block content %}{% endblock %}
+        </main>
     </div>
 </div>
 
