--- a/templates/transfer-details.html.twig
+++ b/templates/transfer-details.html.twig
@@ -3,36 +3,41 @@
 {% block title %} app_name {% endblock %}
 
 {% block content %}
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <div class="row">
-        <div class="well text-center">
-            <h4>{{transfer_name}}Transfer name</h4>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="row">
+            <h1>{{ transfer_name }}Transfer name</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus
                 laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">Schema for Transfer</div>
-            <div class="panel-body">The agreed schema for this tranfer is viewable <u><a href="#">here</a></u></div>
-        </div>
-        {% block flash_message %}
-        {% endblock %}
-        <form action="/metadata-upload" method="post">
+
+            {% block flash_message %}
+            {% endblock %}
+
+            {% if begin_transfer %}
+                {{ include('begin-transfer.html.twig') }}
+            {% endif %}
+
+            {% if show_summary %}
+                {{ include('transfer-summary.html.twig') }}
+            {% endif %}
+
             <div class="panel panel-default">
-                <div class="panel-heading">Select metadata for transfer</div>
-                <div class="panel-body">
-                    <div class="input-group">
-                        <input data-show-preview="true" type="file" class="form-control" placeholder="Upload CSV"
-                               name="upload">
-                        <span class="input-group-btn">
+                <div class="panel-heading">Schema for Transfer</div>
+                <div class="panel-body">The agreed schema for this tranfer is viewable <a href="#">here</a></div>
+            </div>
+            <form action="/metadata-upload" method="post">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Select metadata for transfer</div>
+                    <div class="panel-body">
+                        <div class="input-group">
+                            <input data-show-preview="true" type="file" class="form-control" placeholder="Upload CSV"
+                                   name="upload">
+                            <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">Upload</button>
                     </span>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </form>
-        {% if show_summary %}
-        {{ include('transfer-summary.html.twig') }}
-        {% endif %}
+            </form>
+        </div>
     </div>
-</div>
 {% endblock %}
