--- a/templates/search-results.html.twig
+++ b/templates/search-results.html.twig
@@ -31,23 +31,23 @@
             </div>
             <div class="col-md-8">
                 <div class="list-group">
-                    <a href="#" class="list-group-item">
+                    <a href="/record-preview" class="list-group-item">
                       <h3>Record name</h3>
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                     </a>
-                    <a href="#" class="list-group-item">
+                    <a href="/record-preview" class="list-group-item">
                         <h3>Record name</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                     </a>
-                    <a href="#" class="list-group-item">
+                    <a href="/record-preview" class="list-group-item">
                         <h3>Record name</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                     </a>
-                    <a href="#" class="list-group-item">
+                    <a href="/record-preview" class="list-group-item">
                         <h3>Record name</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                     </a>
-                    <a href="#" class="list-group-item">
+                    <a href="/record-preview" class="list-group-item">
                         <h3>Record name</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
                     </a>
