Introduce 'Register collection' view and route

--- a/templates/transfer-details.html.twig
+++ b/templates/transfer-details.html.twig
@@ -21,8 +21,8 @@
             {% endif %}
 
             <div class="panel panel-default">
-                <div class="panel-heading">Schema for Transfer</div>
-                <div class="panel-body">The agreed schema for this tranfer is viewable <a href="#">here</a></div>
+                <div class="panel-heading">Transfer registration details</div>
+                <div class="panel-body">The details of the collection within this transfer can be viewed and amended on the <a href="/register-collection">collection registration</a> page</div>
             </div>
             <form action="/metadata-upload" method="post">
                 <div class="panel panel-default">
