--- a/templates/begin-transfer.html.twig
+++ b/templates/begin-transfer.html.twig
@@ -2,7 +2,11 @@
     <div class="panel-heading">Begin transfer</div>
     <div class="panel-body">
         <p>We recommend this transfer is provided by upload <a href="/upload" class="btn btn-default">Begin transfer</a></p>
-        <h3>Not sure?</h3>
-        <p>If you do not agree with the suggested transfer method please <a href="/contact-us">contact us</a></p>
+        <h3>Prefer physical HDD?</h3>
+        <p>Alternatively, let us know if you would prefer to provide the transfer by physical <a href="#" id="show-hdd-transfer">Hard Disk Drive</a></p>
+        <div class="hdd-transfer-option">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam, cumque earum in maiores quidem
+                quod similique sint tempora voluptas <a href="/request-hard-drive">Request hard disk drive</a></p>
+        </div>
     </div>
 </div>
