Introduce Bitter and Open Sans fonts

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -7,6 +7,9 @@
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 
+        <!-- Font from Google -->
+        <link href="https://fonts.googleapis.com/css?family=Bitter|Open+Sans:400,700" rel="stylesheet">
+
         <!-- Custom styles for the prototype -->
         <link href="/styles/dist/main.css" rel="stylesheet">
 
