--- a/styles/src/_global.scss
+++ b/styles/src/_global.scss
@@ -1,6 +1,11 @@
 * {
   border-radius: 0!important;
   box-shadow: none!important;
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Bitter', serif;
 }
 
 main {
