Editorial view enhancements

--- a/templates/search-results.html.twig
+++ b/templates/search-results.html.twig
@@ -9,22 +9,29 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-default">
-                    <div class="panel-heading">Search results filters</div>
+                    <div class="panel-heading">
+                        Filter by:
+                        </div>
                     <div class="panel-body">
+                        <h3>Collection</h3>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="" checked="true">Filter by WordDoc</label>
+                            <label><input type="checkbox" value="" checked="true"> COMPH</label>
+                        </div>
+                        <h3>Document type</h3>
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="" checked="true">Word Documents</label>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="">Filter by Pdf</label>
+                            <label><input type="checkbox" value="">Portable Document Format (PDF)</label>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="">Filter by JPG</label>
+                            <label><input type="checkbox" value="">JPEG images</label>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="">Filter by Excel</label>
+                            <label><input type="checkbox" value="">Excel Documents</label>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="">Filter by others</label>
+                            <label><input type="checkbox" value="">Other</label>
                         </div>
                     </div>
                 </div>
