--- a/templates/transfer-details.html.twig
+++ b/templates/transfer-details.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <div class="row">
-            <h1>{{ transfer_name }}Transfer name</h1>
+            <h1>Transfer name</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus
                 laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
 
