--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -7,12 +7,12 @@
 
     <h3>Dashboard</h3>
     <ul class="nav nav-sidebar">
-        <li class="active"><a href="#">My Transfers<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">My Transfers</a></li>
         <li><a href="#">My Records</a></li>
     </ul>
     {% include 'guidance.html.twig' %}
     <h3>Messages</h3>
     <ul class="nav nav-sidebar">
-        <li><a href="">Message center</a></li>
+        <li><a href="">Message centre</a></li>
     </ul>
 </div>
