Editorial changes and introduction of 'intro' page

--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -7,8 +7,8 @@
 
     <h3>Dashboard</h3>
     <ul class="nav nav-sidebar">
-        <li><a href="#">My Transfers</a></li>
-        <li><a href="#">My Records</a></li>
+        <li><a href="#">My transfers</a></li>
+        <li><a href="#">My records</a></li>
     </ul>
     {% include 'guidance.html.twig' %}
     <h3>Messages</h3>
