--- a/templates/aggregate-transfers.html.twig
+++ b/templates/aggregate-transfers.html.twig
@@ -6,27 +6,33 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h1 class="page-header">{{ department_name }} transfers</h1>
     <div class="row">
-        <div class="col-md-3">
-            <p class="navbar-left">Filter by</p>
+        <div class="col-md-4">
+            <h4>Filter by</h4>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
+            <select class="form-control">
+                <option>Transfer Status</option>
+            </select>
+        </div>
+        <div class="col-md-2">
             <select class="form-control">
                 <option>Transfer type</option>
             </select>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
             <select class="form-control">
                 <option>Year</option>
             </select>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
             <select class="form-control">
                 <option>Transfer status</option>
             </select>
         </div>
     </div>
+    <hr>
     <div class="results">
-        {% for year in range(2014,2017) %}
+        {% for year in range(2014,2017) | reverse %}
             <h3>{{ year }}</h3>
             {% for i in range(0,3) %}
                 {% include 'individual-transfer.html.twig' %}
