--- a/templates/individual-transfer.html.twig
+++ b/templates/individual-transfer.html.twig
@@ -2,6 +2,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">Transfer</h3>
+            <span class="pull-right">Status 1</span>
         </div>
         <div class="panel-body">
             <div class="col-md-1">
