--- a/templates/individual-transfer.html.twig
+++ b/templates/individual-transfer.html.twig
@@ -1,20 +1,27 @@
 <a href="/transfer">
-    <div class="panel panel-default">
+    <div class="panel panel-default individual-transfer">
         <div class="panel-heading">
-            <h3 class="panel-title">Transfer</h3>
-            <span class="pull-right">Status 1</span>
+            <h3 class="panel-title">BT95: Board of Trade: Companies Registration Office: Classified Index ('Classi
+                Sheets') to Files of Dissolved Exempt Private Companies</h3>
+            <span class="label label-default">Transfer status</span>
         </div>
         <div class="panel-body">
             <div class="col-md-1">
                 <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
             </div>
             <div class="col-md-11">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi autem consectetur cum
-                    dignissimos ipsam laboriosam odio pariatur tempore veniam</p>
+                <p>
+                    The Companies Registration Office classified index provides particulars of dissolved exempt private
+                    companies. They contain administrative summary information regarding the dissolved company. The
+                    summary information concerns mainly the capital and the area of the company work. These were
+                    maintained in paper format until 1986. From 1986, computerised databases were used to record the
+                    information: the STEM and PUBL databases.
+                    This series is a hybrid series that contains paper and digital files (2525 volumes and 2 digital
+                    files).</p>
             </div>
         </div>
         <div class="panel-footer">
-            Transfer Footer
+            Collection type: Born digital
         </div>
     </div>
 </a>
