--- a/templates/transfer-summary.html.twig
+++ b/templates/transfer-summary.html.twig
@@ -5,7 +5,7 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
             <hr>
             <div class="col-md-6">
-                <img src="http://www.iconsdb.com/icons/preview/black/bar-chart-7-xxl.png" class="img-responsive center-block">
+                <img src="../images/bar-chart-7-xxl.png" class="img-responsive center-block">
                 <hr>
                 <p>
                     Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
@@ -18,7 +18,7 @@
                 </p>
             </div>
             <div class="col-md-6">
-                <img src="http://www.iconsdb.com/icons/preview/black/pie-chart-xxl.png" class="img-responsive center-block">
+                <img src="../images/pie-chart-xxl.png" class="img-responsive center-block">
                 <hr>
                 <div class="list-group">
                     <a href="/search-results" class="list-group-item">Records in word format (.doc) <span class="badge">14</span></a>
