--- a/templates/search-results.html.twig
+++ b/templates/search-results.html.twig
@@ -19,19 +19,16 @@
                         </div>
                         <h3>Document type</h3>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="" checked="true">Word Documents</label>
+                            <label><input type="checkbox" value="" checked="true">All</label>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="">Portable Document Format (PDF)</label>
+                            <label><input type="checkbox" value="">Open records</label>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="">JPEG images</label>
+                            <label><input type="checkbox" value="">Closed records</label>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox" value="">Excel Documents</label>
-                        </div>
-                        <div class="checkbox">
-                            <label><input type="checkbox" value="">Other</label>
+                            <label><input type="checkbox" value="">Closed records with open description</label>
                         </div>
                     </div>
                 </div>
