--- a/templates/transfer-summary.html.twig
+++ b/templates/transfer-summary.html.twig
@@ -20,12 +20,22 @@
             <div class="col-md-6">
                 <img src="../images/pie-chart-xxl.png" class="img-responsive center-block">
                 <hr>
-                <div class="list-group">
-                    <a href="/search-results" class="list-group-item">Records in word format (.doc) <span class="badge">14</span></a>
-                    <a href="/search-results" class="list-group-item">Records in pdf format (.pdf) <span class="badge">6</span></a>
-                    <a href="/search-results" class="list-group-item">Records in excel format (.xl) <span class="badge">4</span></a>
-                    <a href="/search-results" class="list-group-item">Records in Picture format (.jpg) <span class="badge">34</span></a>
-                    <a href="/search-results" class="list-group-item">Records in other format <span class="badge">0</span></a>
+                {#<div class="list-group">#}
+                    {#<a href="/search-results" class="list-group-item">Records in word format (.doc) <span class="badge">14</span></a>#}
+                    {#<a href="/search-results" class="list-group-item">Records in pdf format (.pdf) <span class="badge">6</span></a>#}
+                    {#<a href="/search-results" class="list-group-item">Records in excel format (.xl) <span class="badge">4</span></a>#}
+                    {#<a href="/search-results" class="list-group-item">Records in Picture format (.jpg) <span class="badge">34</span></a>#}
+                    {#<a href="/search-results" class="list-group-item">Records in other format <span class="badge">0</span></a>#}
+                {#</div>#}
+                <div class="panel panel-default">
+                    <!-- Default panel contents -->
+                    <div class="panel-heading">Total number of records <span class="badge">102</span></div>
+                    <!-- List group -->
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="/search-results">Open records <span class="badge">34</span></a></li>
+                        <li class="list-group-item"><a href="/search-results">Closed records <span class="badge">34</span></a></li>
+                        <li class="list-group-item"><a href="/search-results">Closed records with open description<span class="badge">34</span></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
