Included status bar, and included the variables sass partials globally.

--- a/styles/src/_variables.scss
+++ b/styles/src/_variables.scss
@@ -8,4 +8,4 @@ $home-office-colour: #9325b2;
 $light-grey: #dedede;
 $dark-grey: #343434;
 $notification-yellow: rgb(252, 255, 42);
-
+$success:#eeffe7;
