--- a/styles/src/_transfer.scss
+++ b/styles/src/_transfer.scss
@@ -52,3 +52,14 @@ a:hover {
     float: right;
   }
 }
+.status {
+  span.glyphicon-ok {
+    border-radius: 100%!important;
+    -moz-border-radius: 100%!important;
+    -webkit-border-radius: 100%!important;
+    color: #3c763d;
+    background-color: #dff0d8;
+    border: 1px solid #3c763d;
+    padding: .1em;
+  }
+}
