--- a/styles/src/_transfer.scss
+++ b/styles/src/_transfer.scss
@@ -63,3 +63,41 @@ a:hover {
     padding: .1em;
   }
 }
+
+#transfer_collection {
+  .panel-heading {
+    padding: .5em;
+  }
+  .panel-title > a {
+    display: block;
+    padding: 0.4em 0.6em;
+    font-weight: bold;
+  }
+}
+
+#transfer_collection .panel-title > a.accordion-toggle::before, #transfer_collection a[data-toggle="collapse"]::before  {
+  content:"\e113";
+  float: left;
+  font-family: 'Glyphicons Halflings';
+  margin-right :1em;
+}
+#transfer_collection .panel-title > a.accordion-toggle.collapsed::before, #transfer_collection a.collapsed[data-toggle="collapse"]::before  {
+  content:"\e114";
+}
+
+#transfer_collection {
+  .col-md-10 {
+    a {
+      text-decoration: underline;
+    }
+  }
+}
+
+
+.table {
+  tr{
+    td:first-of-type {
+      font-weight: bold;
+    }
+  }
+}
